# SOide

./: .gitignore  build.gradle  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-bridge.cpp  ndk_asm.cpp  ndk_disasm.cpp  ndk_native.h
app/src/main/java/com/soide/: MainActivity.java
app/src/main/java/com/soide/elf/: Arm32StringReferenceAnalyzer.java  Arm64StringReferenceAnalyzer.java  ControlFlowAnalyzer.java  CrossReferenceAnalyzer.java  DisassembledInstruction.java  Disassembler.java  DynamicEntry.java  ElfConstants.java  ElfFile.java  ElfHeader.java  ElfParser.java  ExtractedString.java  FunctionInfo.java  FunctionNameResolver.java  HashLookup.java  ImportedFunction.java  LinearSweepAnalyzer.java  ProgramHeader.java  RelocationEntry.java  SectionHeader.java  StringReferenceAnalyzer.java  StringReferenceAnalyzerFactory.java  SymbolEntry.java
app/src/main/java/com/soide/nativebridge/: NativeBridge.java
app/src/main/java/com/soide/ui/: AsmAdapter.java  AsmTabFragment.java  AssemblerFragment.java  BuildConfigHelper.java  CfgCanvasView.java  ControlFlowTabFragment.java  DemangleFragment.java  DetailAdapter.java  DetailListTabFragment.java  DetailPagerAdapter.java  Formatter.java  FuncDetailActivity.java  FuncDetailData.java  FuncDetailHost.java  FuncListAdapter.java  FuncListTabFragment.java  FunctionAdapter.java  FunctionsFragment.java  HeaderTabFragment.java  HistoryFragment.java  HomeFragment.java  ItemDetailDialog.java  ListCardAdapter.java  ParseFragment.java  ParsePagerAdapter.java  ParseResultHolder.java  PseudoCTabFragment.java  SettingsFragment.java  SoDetailActivity.java  TextContentFragment.java  ToolsFragment.java  VipGlowCardView.java  XRefTabFragment.java
app/src/main/java/com/soide/util/: Assembler.java  BaseConverter.java  CacheStore.java  Demangler.java  HistoryManager.java  PermissionHelper.java  SettingsPrefs.java  ThemeUtils.java
app/src/main/res/color-night/: bottom_nav_color.xml
app/src/main/res/drawable/: file_path_bg.xml  ic_assembler.xml  ic_back.xml  ic_file.xml  ic_function.xml  ic_hash.xml  ic_history.xml  ic_import.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_library.xml  ic_program.xml  ic_relocation.xml  ic_section.xml  ic_settings.xml  ic_so_file.xml  ic_string.xml  ic_symbol.xml  ic_tools.xml
app/src/main/res/layout/: activity_func_detail.xml  activity_main.xml  activity_so_detail.xml  fragment_asm_tab.xml  fragment_assembler.xml  fragment_control_flow_tab.xml  fragment_demangle.xml  fragment_func_detail.xml  fragment_func_tab.xml  fragment_functions.xml  fragment_history.xml  fragment_home.xml  fragment_list_tab.xml  fragment_parse.xml  fragment_text_content.xml  fragment_tools.xml  item_base_row.xml  item_detail.xml  item_insn.xml  item_list.xml  item_list_card.xml
app/src/main/res/menu/: bottom_nav.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+3 files in other folders)
